--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Easily create CSV data from json collection",
     "repository": {
         "type": "git",
-        "url": "https://github.com/alexcaza/export-to-csv.git"
+        "url": "https://github.com/glassbox-front-end/export-to-csv.git"
     },
     "scripts": {
         "dev": "tsc --watch",
@@ -44,6 +44,6 @@
         "karma-phantomjs-launcher": "^1.0.4",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-typescript": "^3.0.8",
-        "typescript": "~2.4.0"
+        "typescript": "^4.2.4"
     }
 }
